[gd_scene load_steps=3 format=3 uid="uid://ctyfbpurfu22q"]

[ext_resource type="Script" uid="uid://xx5x06tw0xx4" path="res://scenes/ui/san_ui.gd" id="1_o8xyg"]
[ext_resource type="Texture2D" uid="uid://c7ciwh15oaa5u" path="res://art/flipped_enemy.png" id="2_18656"]

[node name="SanUI" type="HBoxContainer"]
offset_right = 59.0
offset_bottom = 38.0
scale = Vector2(0.3, 0.3)
alignment = 1
script = ExtResource("1_o8xyg")

[node name="SanImage" type="TextureRect" parent="."]
layout_mode = 2
texture = ExtResource("2_18656")
stretch_mode = 5

[node name="SanLabel" type="Label" parent="."]
layout_mode = 2
text = "3"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MaxSanLabel" type="Label" parent="."]
layout_mode = 2
text = "/13"
horizontal_alignment = 1
vertical_alignment = 1
